kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/invalid/003_associations_03.kmt
/* $Id: 003_associations_03.kmt,v 1.1 2005-11-18 15:50:21 dvojtise Exp $ */

// Test of a invalid associations

package root_package;


/* opposite mismatch  : the association is illformed */
class A {
    reference b : B#r2
}
class B {
	reference r1 : A#b
	reference r2 : A
	
}
